Fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,7 @@ body {
 .epk-container {
   display: flex;
   align-items: center; 
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 5px;
+  justify-content: center;
 }
 
 /* .container img {
